--- a/assets/css/frame.sass
+++ b/assets/css/frame.sass
@@ -9,6 +9,7 @@ html
 
 body
   box-shadow: 0 0 .3em lighten($dark, 65%)
+  font-size: 16px; // Размер шрифта по вашему усмотрению
 
 body > header, body > footer
   background: lighten($dark, 5%)
@@ -25,3 +26,4 @@ body > header, body > footer
     background: $dark
   body, body > header, body > footer
     box-shadow: 0 0 0 1px lighten($dark, 8%)
+    font-size: 16px; // Размер шрифта по вашему усмотрению
