--- a/assets/css/frame.sass
+++ b/assets/css/frame.sass
@@ -9,7 +9,7 @@ html
 
 body
   box-shadow: 0 0 .3em lighten($dark, 65%)
-  font-size: 16px; // Размер шрифта по вашему усмотрению
+  font-size: 16px; // Размер шрифта
 
 body > header, body > footer
   background: lighten($dark, 5%)
@@ -26,4 +26,4 @@ body > header, body > footer
     background: $dark
   body, body > header, body > footer
     box-shadow: 0 0 0 1px lighten($dark, 8%)
-    font-size: 16px; // Размер шрифта по вашему усмотрению
+    font-size: 16px; // Размер шрифта
