--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 <meta name="author" content="{{ page.author | default: site.author | escape }}">
 <meta name="generator" content="Jekyll v{{ jekyll.version }}">
 <meta name="yandex-verification" content="9403bd5f1a76861b" />
+<meta name="google-site-verification" content="PaALH3GMgOUduIZx9nBKxNMosm34wdRdVLiLF9EwG3k" />
 <meta name="description" content="Расскажу о разнообразных telegram ботах для поиска информации. Эти боты для деанона и OSINT, помогают вам пробивать человеке по номерам телефонов, номерам автомобилей, адресам, электронным ящикам почты и находить ценную информацию в интернете." />
 <link rel="canonical" href="{{ page.url | absolute_url }}">
 {% if site.show_frame %}
