--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <meta charset="{{ site.encoding }}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="{{ page.author | default: site.author | escape }}">
-<meta name="keywords" content="боты пробива тг telegram бесплатно человека в телеграм  пробить номер телефона авто или ФИО "/>
+<meta name="keywords" content="пробить человека по номеру телефона бесплатно, gebutcher, геолокацию по номеру телефона бесплатно пробить, номер по базе гибдд пробить, авто по гос номеру пробить, вин номер пробить, бот пробить номер телефона, пробить данные по номеру телефона, программа пробить номер телефона, где номер телефона узнать владельца пробить, пробить через номер телефона, информацию по номеру телефона пробить, тг бот пробить номер, химера пробить номер, боты пробивы номеров, номер карты пробив по, пробить бот тг, номер гибдд пробить, пробить человека по номеру бесплатно, номер по геолокации телефона по пробить, пробить номеру по телефона бесплатно, пробить номер телефона по базе, номер пробить можно ли, номеру владельца по бесплатно пробить" />
 <meta name="description" content="Расскажу о разнообразных telegram ботах для поиска информации. Эти боты для деанона и OSINT, помогают вам пробивать человеке по номерам телефонов, номерам автомобилей, адресам, электронным ящикам почты и находить ценную информацию в интернете." />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <meta http-equiv="content-language" content="ru"/>
