--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "ru" }}">
 <title>{% if page.title %}{{ page.title | escape }} | {% endif %}{{ site.title | escape }}</title>
-<meta charset="{{ site.encoding }}">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="{{ page.author | default: site.author | escape }}">
-<meta name="keywords" content="пробить человека по номеру телефона бесплатно, gebutcher, геолокацию по номеру телефона бесплатно пробить, номер по базе гибдд пробить, авто по гос номеру пробить, вин номер пробить, бот пробить номер телефона, пробить данные по номеру телефона, программа пробить номер телефона, где номер телефона узнать владельца пробить, пробить через номер телефона, информацию по номеру телефона пробить, тг бот пробить номер, химера пробить номер, боты пробивы номеров, номер карты пробив по, пробить бот тг, номер гибдд пробить, пробить человека по номеру бесплатно, номер по геолокации телефона по пробить, пробить номеру по телефона бесплатно, пробить номер телефона по базе, номер пробить можно ли, номеру владельца по бесплатно пробить" />
-<meta name="description" content="Расскажу о разнообразных telegram ботах для поиска информации. Эти боты для деанона и OSINT, помогают вам пробивать человеке по номерам телефонов, номерам автомобилей, адресам, электронным ящикам почты и находить ценную информацию в интернете." />
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-<link rel="canonical" href="{{ page.url | absolute_url }}">
+    <meta charset="{{ site.encoding }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="{{ page.author | default: site.author | escape }}">
+    <meta name="keywords" content="пробить человека по номеру телефона бесплатно, геолокация по номеру телефона бесплатно, номер по базе ГИБДД, авто по гос номеру, VIN номер, бот пробить номер телефона, данные по номеру телефона, программа пробить номер телефона, узнать владельца номера, информация по номеру телефона, Telegram бот пробить номер, боты пробивки номеров, номер карты пробить, номер ГИБДД пробить, пробить человека бесплатно, номер по геолокации, пробить номер телефона по базе">
+    <meta name="description" content="Расскажу о разнообразных Telegram-ботах для поиска информации. Эти боты для деанона и OSINT помогают пробивать человека по номерам телефонов, номерам автомобилей, адресам, электронным ящикам и находить ценную информацию в интернете.">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="canonical" href="{{ page.url | absolute_url }}">
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
